--- a/scss/_helpers.scss
+++ b/scss/_helpers.scss
@@ -449,3 +449,25 @@
   }
   @return false;
 }
+
+// Define if the value is containing any 'px' postfix, create 'px' if it not
+@mixin print-variables-in-root($map_name, $map_container , $key_name, $prefix) {
+  $project-prefix: map-get($info, 'variable-prefix');
+
+  // get value list from $map_name
+  $allowedValuesList: map-get($map_container, $key_name);
+
+  :root {
+    @each $name, $value in $map_name {
+      $isHavingUnit: get-unit($value);
+      $isAllowedValue: map-search($allowedValuesList, $value);
+      // if the value is existing in the $map_name and it does not have unit value => create variable value
+      @if ($isAllowedValue and $isHavingUnit == "") {
+        @include get-variable(#{$prefix}-#{replace-prop($name)}, var(#{get-variable(#{$prefix}-#{replace-prop($value)})}));
+      } @else {
+        @include get-variable(#{$prefix}-#{replace-prop($name)}, format-value($value));
+      }
+    }
+  }
+}
+
